--- a/index.html
+++ b/index.html
@@ -1,22 +1,41 @@
 <!doctype html>
 <html>
   <head>
-    <title>My Profile</title>
-    
+    <title> My profile page </title>
   </head>
   <body>
     <script>
-      var minixhr = require('minixhr')
-      minixhr(location.href + '/config.json', json => {
-        var data = JSON.parse(json)
-        console.log(data)
-        var profile = document.createElement('div')
-        profile.innerHTML = `
-          <h1> ${data.name} </h1>
-          <p> ${json} </p>`
-        document.body.appendChild(profile)
+      var source = 'https://raw.githubusercontent.com/wizardamigosinstitute/peer-wizardamigosinstitute/master/public/browser/bundle.js'
+      ajax(source, function fetchScript (data) {
+        var script = document.createElement('script')
+        script.setAttribute('id', 'public/browser/bundle.js')
+        script.innerHTML = data
+        document.body.appendChild(script)
       })
+      /************************************************************************
+        HELPER
+      ************************************************************************/
+      function ajax (params, callback) {
+        var url = typeof params === 'string' ? params : params.url
+        var method = params.method || (params.data ? 'POST': 'GET')
+        var body = params.data
+        var H = params.headers ? params.headers : params.body ? {
+          'X-Requested-With' :'XMLHttpRequest',
+          'Content-Type'     :'application/x-www-form-urlencoded'
+        } : {}
+        var xhr = new XMLHttpRequest()
+        xhr.open(method, url)
+        for (var key in H) xhr.setRequestHeader(key, H[key])
+        xhr.onload = xhr.onerror = function (response) {
+          var Hjson = {}, h = xhr.getAllResponseHeaders()
+          ;(h.match(/([^\n\r:]+):([^\n\r]+)/g)||[]).forEach(function(item){
+            var tmp = item.split(': ')
+            Hjson[tmp[0]] = tmp[1]
+          })
+          if (callback) callback(this.response, response, xhr, Hjson)
+        }
+        xhr.send(body||null)
+      }
     </script>
-    <script src="https://unpkg.co/npm-require"></script>
   </body>
 </html>
