--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <script>
-      var source = 'https://raw.githubusercontent.com/wizardamigosinstitute/peer-wizardamigosinstitute/master/public/browser/bundle.js'
+//       var source = 'https://raw.githubusercontent.com/wizardamigosinstitute/peer-wizardamigosinstitute/master/public/browser/bundle.js'
       ajax(source, function fetchScript (data) {
         var script = document.createElement('script')
         script.setAttribute('id', 'public/browser/bundle.js')
