--- a/index.html
+++ b/index.html
@@ -1,41 +1,207 @@
 <!doctype html>
-<html>
-  <head>
-    <title> My profile page </title>
-  </head>
-  <body>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
+    <script src="assets/js/jquery-slim.min.js"></script>
+
+
+    <title>Afia Udofia - Senior UI / UX Designer and Frontend Development</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127442936-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-127442936-1');
+</script>
+
+</head>
+
+<body>
+
+
+    <div id="main">
+        <div class="container">
+            <div class="row pt-4 pb-3">
+                <div class="col-sm-2">
+                    <img src="assets/img/profile.jpg" class="rounded-circle img-fluid profile-img" />
+                </div>
+
+                <div class="col-sm-10">
+                    <div class="intro">
+                        <h1 class="lead">Afia Udofia</h1>
+                        <h3 class="small">Senior UI / UX Designer & Frontend Developer</h3>
+                        <div>
+                            <span class="badge badge-primary">UX Designer</span>
+                            <span class="badge badge-success">Frontend Developer</span>
+                        </div>
+                        <div class="location">
+                            <span><i class="fas fa-map-marker-alt"></i> Lagos, Nigeria</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="profile">
+
+                        <div class="details">
+                            <hr>
+                            <p>I am a senior UI / UX Designer & Front-end Developer based in Lagos,
+                                Nigeria. For over 13 years, I have been creating beautiful, functional and reusable
+                                digital products for web, mobile and desktop environments for companies of all sizes.</p>
+                            <p>
+                                Building something awesome soon? Lets talk about it. I'd love to hear from you.
+                            </p>
+                            <p>
+                                <a href="#" onclick="openSkill()" class="btn btn-primary">My Skills</a>
+                                <a href="#" onclick="openWork()" class="btn btn-primary">My Work</a>
+                                <a href="mailto:afia.udofia@gmail.com" class="btn btn-primary">Send an email
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-12">
+                    <hr>
+                    <div class="footer">
+                            <span class="mr-2">
+                                    Connect with me:
+                                </span>
+
+                        <span class="mr-2 -2">
+                            <a href="https://twitter.com/afiaudofia" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+                        </span>
+
+                        <span class="mr-2 ml-2">
+                            <a href="https://linkedin.com/in/afiaudofia/" target="_blank"><i class="fab fa-linkedin"></i> Linkedin</a>
+                        </span>
+
+                        <span class="mr-2 ml-2">
+                            <a href="https://dribbble.com/afiaudofia" target="_blank"><i class="fab fa-dribbble"></i> Dribbble</a>
+                        </span>
+
+                        <span class="mr-2 ml-2">
+                            <a href="https://github.com/afiaudofia" target="_blank"><i class="fab fa-github"></i> Github</a>
+                        </span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+
+    </div>
+
+
+    <div id="myskill" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeSkill()">&times;</a>
+        <div class="skills">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Graphics Designs <span class="small">-- Expert</span><br>
+                    <span class="badge badge-primary">Fireworks</span>
+                    <span class="badge badge-primary">Photoshop</span>
+                    <span class="badge badge-primary">Corel Draw</span>
+                    <span class="badge badge-primary">Illustrator</span>
+                    <span class="badge badge-primary">Sketch</span>
+                </li>
+                <li class="list-group-item">Prototyping & Mockups <span class="small">-- Expert</span><br>
+                    <span class="badge badge-primary">Balsamiq</span>
+                    <span class="badge badge-primary">Invision</span>
+                    <span class="badge badge-primary">UXPin</span>
+                </li>
+                <li class="list-group-item">UI/UX Designs <span class="small">-- Expert</span><br>
+                    <span class="badge badge-primary">HTML5/CSS3</span>
+                    <span class="badge badge-primary">Bootstrap</span>
+                    <span class="badge badge-primary">Materialize</span>
+                    <span class="badge badge-primary">Foundation</span>
+                </li>
+                <li class="list-group-item">Content Management System <span class="small">-- Expert</span><br>
+                    <span class="badge badge-primary">Wordpress</span>
+                    <span class="badge badge-primary">Joomla</span>
+                    <span class="badge badge-primary">Drupal</span>
+
+                </li>
+                <li class="list-group-item">Javascript Frontend <span class="small">-- Experienced</span><br>
+                    <span class="badge badge-primary">jQuery</span>
+                    <span class="badge badge-primary">Angular</span>
+                    <span class="badge badge-primary">React</span>
+                    <span class="badge badge-primary">React Native</span>
+                    <span class="badge badge-primary">Electron App</span>
+                </li>
+                <li class="list-group-item">Backend Framework <span class="small">-- Experienced</span><br>
+                    <span class="badge badge-primary">PHP</span>
+                    <span class="badge badge-primary">Slim</span>
+                    <span class="badge badge-primary">Laravel</span>
+                </li>
+                <li class="list-group-item">Database <span class="small">-- Experienced</span><br>
+                    <span class="badge badge-primary">MySQL</span>
+                    <span class="badge badge-primary">NoSQL</span>
+
+                </li>
+                <li class="list-group-item">eCommerce <span class="small">-- Experienced</span><br>
+                    <span class="badge badge-primary">WooCommerce</span>
+                    <span class="badge badge-primary">Magento</span>
+                    <span class="badge badge-primary">BigCommerce</span>
+                </li>
+                <li class="list-group-item">Environments & Version Control <span class="small">-- Experienced</span><br>
+                    <span class="badge badge-primary">AWS</span>
+                    <span class="badge badge-primary">GIT</span>
+                    <span class="badge badge-primary">Docker</span>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+
+    <div id="mywork" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeWork()">&times;</a>
+        <div class="work">
+            Coming soon...
+        </div>
+    </div>
     <script>
-//       var source = 'https://raw.githubusercontent.com/wizardamigosinstitute/peer-wizardamigosinstitute/master/public/browser/bundle.js'
-      ajax(source, function fetchScript (data) {
-        var script = document.createElement('script')
-        script.setAttribute('id', 'public/browser/bundle.js')
-        script.innerHTML = data
-        document.body.appendChild(script)
-      })
-      /************************************************************************
-        HELPER
-      ************************************************************************/
-      function ajax (params, callback) {
-        var url = typeof params === 'string' ? params : params.url
-        var method = params.method || (params.data ? 'POST': 'GET')
-        var body = params.data
-        var H = params.headers ? params.headers : params.body ? {
-          'X-Requested-With' :'XMLHttpRequest',
-          'Content-Type'     :'application/x-www-form-urlencoded'
-        } : {}
-        var xhr = new XMLHttpRequest()
-        xhr.open(method, url)
-        for (var key in H) xhr.setRequestHeader(key, H[key])
-        xhr.onload = xhr.onerror = function (response) {
-          var Hjson = {}, h = xhr.getAllResponseHeaders()
-          ;(h.match(/([^\n\r:]+):([^\n\r]+)/g)||[]).forEach(function(item){
-            var tmp = item.split(': ')
-            Hjson[tmp[0]] = tmp[1]
-          })
-          if (callback) callback(this.response, response, xhr, Hjson)
+        function openSkill() {
+            document.getElementById("myskill").style.width = "400px";
+            document.getElementById("main").style.filter = "blur(1rem)";
+            document.getElementById("main").style.pointerEvents = "none";
         }
-        xhr.send(body||null)
-      }
+        function openWork() {
+            document.getElementById("mywork").style.width = "400px";
+            document.getElementById("main").style.filter = "blur(1rem)";
+            document.getElementById("main").style.pointerEvents = "none";
+        }
+        function closeSkill() {
+            document.getElementById("myskill").style.width = "0";
+            document.getElementById("main").style.filter = "blur(0)";
+            document.getElementById("main").style.pointerEvents = "";
+        }
+        function closeWork() {
+            document.getElementById("mywork").style.width = "0";
+            document.getElementById("main").style.filter = "blur(0)";
+            document.getElementById("main").style.pointerEvents = "";
+        }
     </script>
-  </body>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+
+</body>
+
 </html>
