--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div id="mywork" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeWork()">&times;</a>
         <div class="work">
-            Coming soon...
+            Please check back soon..
         </div>
     </div>
     <script>
