--- a/index.html
+++ b/index.html
@@ -118,16 +118,17 @@
                     <span class="badge badge-primary">Illustrator</span>
                     <span class="badge badge-primary">Sketch</span>
                 </li>
-                <li class="list-group-item">Prototyping & Mockups <span class="small">-- Expert</span><br>
-                    <span class="badge badge-primary">Balsamiq</span>
-                    <span class="badge badge-primary">Invision</span>
-                    <span class="badge badge-primary">UXPin</span>
-                </li>
-                <li class="list-group-item">UI/UX Designs <span class="small">-- Expert</span><br>
+                
+                <li class="list-group-item">UI and Frameworks <span class="small">-- Expert</span><br>
                     <span class="badge badge-primary">HTML5/CSS3</span>
                     <span class="badge badge-primary">Bootstrap</span>
                     <span class="badge badge-primary">Materialize</span>
                     <span class="badge badge-primary">Foundation</span>
+                </li>
+                <li class="list-group-item">UX Designs <span class="small">-- Expert</span><br>
+                    <span class="badge badge-primary">Balsamiq</span>
+                    <span class="badge badge-primary">Invision</span>
+                    <span class="badge badge-primary">UXPin</span>
                 </li>
                 <li class="list-group-item">Content Management System <span class="small">-- Expert</span><br>
                     <span class="badge badge-primary">Wordpress</span>
@@ -170,7 +171,7 @@
     <div id="mywork" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeWork()">&times;</a>
         <div class="work">
-            Please check back soon..
+            No work uploaded yet. Please check back soon..
         </div>
     </div>
     <script>
@@ -200,6 +201,7 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/script.js"></script>
 
 </body>
 
