--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
                     <span class="badge badge-primary">Sketch</span>
                 </li>
                 
-                <li class="list-group-item">UI and Frameworks <span class="small">-- Expert</span><br>
-                    <span class="badge badge-primary">HTML5/CSS3</span>
+                <li class="list-group-item">UI Design and Frameworks <span class="small">-- Expert</span><br>
+                    <span class="badge badge-primary">HTML5/CSS3/SASS</span>
                     <span class="badge badge-primary">Bootstrap</span>
                     <span class="badge badge-primary">Materialize</span>
                     <span class="badge badge-primary">Foundation</span>
                 </li>
-                <li class="list-group-item">UX Designs <span class="small">-- Expert</span><br>
+                <li class="list-group-item">UX Designs <span class="small">-- Experienced</span><br>
                     <span class="badge badge-primary">Balsamiq</span>
                     <span class="badge badge-primary">Invision</span>
                     <span class="badge badge-primary">UXPin</span>
