Added Adobe XD and Redux

--- a/index.html
+++ b/index.html
@@ -126,9 +126,12 @@
                     <span class="badge badge-primary">Foundation</span>
                 </li>
                 <li class="list-group-item">UX Designs <span class="small">-- Experienced</span><br>
-                    <span class="badge badge-primary">Balsamiq</span>
+                    <span class="badge badge-primary">Adobe XD</span>
+                    <span class="badge badge-primary">Sketch</span>
                     <span class="badge badge-primary">Invision</span>
+                    <span class="badge badge-primary">Balsamiq</span>
                     <span class="badge badge-primary">UXPin</span>
+                    
                 </li>
                 <li class="list-group-item">Content Management System <span class="small">-- Expert</span><br>
                     <span class="badge badge-primary">Wordpress</span>
@@ -139,7 +142,7 @@
                 <li class="list-group-item">Javascript Frontend <span class="small">-- Experienced</span><br>
                     <span class="badge badge-primary">jQuery</span>
                     <span class="badge badge-primary">Angular</span>
-                    <span class="badge badge-primary">React</span>
+                    <span class="badge badge-primary">React and Redux</span>
                     <span class="badge badge-primary">React Native</span>
                     <span class="badge badge-primary">Electron App</span>
                 </li>
