--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </p>
                             <p>
                                 <a href="#" onclick="openSkill()" class="btn btn-primary">My Skills</a>
-                                <a href="#" onclick="openWork()" class="btn btn-primary">My Work</a>
+                                <!-- <a href="#" onclick="openWork()" class="btn btn-primary">My Work</a> -->
                                 <a href="mailto:afia.udofia@gmail.com" class="btn btn-primary">Send an email
                                 </a>
                             </p>
